# cogno-soma

./: LOGGING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cogno_soma/: __init__.py  config.py  errors.py  hooks.py  pipeline.py  session.py
docs/: BUILD_YOUR_OWN_HOST.md  HOST_INTEGRATION.md
examples/: host_min.py  host_real.py
tests/: conftest.py
tests/integration/: test_e2e_live.py
tests/unit/: test_config_and_errors.py  test_hooks.py  test_pipeline.py  test_session.py
