[project]
name = "cogno-soma"
version = "0.1.0"
description = "The reference orchestrator for the Cogno cognitive pipeline — wires cogno-anima's stages (NOUMENO→NER→ID→EGO⇄SUPEREGO→Drift) end-to-end with the correction loop, PII/scope/handoff gates, an interception seam and atomicity hooks. Infra-agnostic: the host injects backends, the dispatcher and prompts."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Sudoers AI" }]
keywords = ["orchestrator", "pipeline", "agents", "cognitive", "cogno", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
# soma imports the cognitive stages at runtime → cogno-anima is a real runtime dep
# (it re-exports the cogno-synapse protocols soma also imports directly). Neither is
# on PyPI yet; CI installs them from git first (see .github/workflows/ci.yml).
dependencies = [
    "cogno-anima",
    "cogno-synapse",
]

[project.urls]
Homepage = "https://github.com/sudoers-ai/cogno-soma"
Repository = "https://github.com/sudoers-ai/cogno-soma"
Issues = "https://github.com/sudoers-ai/cogno-soma/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cogno_soma*"]

[tool.setuptools.package-data]
cogno_soma = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Put the repo root on sys.path so `tests/` can import the shared `tests.conftest`
# fakes under the bare `pytest` console script.
pythonpath = ["."]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
files = ["cogno_soma"]
warn_unused_ignores = true
